--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "author": "Rahul Rajkumar gupta",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.6",
+    "sequelize": "^6.37.3"
   }
 }
